re-organizing iterator